[gd_scene load_steps=23 format=3 uid="uid://dh6ro2fvtttpj"]

[ext_resource type="TileSet" uid="uid://by0573pold2mf" path="res://tilemaps/building/building16.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://bg26s64vravhx" path="res://scenes/templates/faculty_maps/turnstile.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://brj8gkoicn5o0" path="res://scenes/triggers/advanced/function_trigger.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/templates/faculty_maps/teleport.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://6ci61elv1k5l" path="res://scenes/templates/characters/player.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/templates/characters/guard.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://dv1v5elamsnrs" path="res://sprites/doors/door_225.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cw20wyl6e64x5" path="res://sprites/doors/door_227.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bi8snlu3u8cug" path="res://sprites/doors/door_224.png" id="9"]
[ext_resource type="Texture2D" uid="uid://s1b34ao1u3gm" path="res://sprites/doors/door_226.png" id="10"]
[ext_resource type="Texture2D" uid="uid://b22imf5gx0d7" path="res://sprites/doors/door_132.png" id="11"]
[ext_resource type="Texture2D" uid="uid://cuq6s6k0poc30" path="res://sprites/doors/door_130.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dct0mapmxj2yp" path="res://sprites/doors/door_313.png" id="13"]
[ext_resource type="Texture2D" uid="uid://vh4mb318rqpr" path="res://sprites/doors/door_312.png" id="14"]
[ext_resource type="PackedScene" uid="uid://w4wxtu6uv0q7" path="res://scenes/templates/characters/ai.tscn" id="15"]
[ext_resource type="Script" path="res://scripts/templates/characters/ai_config.gd" id="16"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 128)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(128, 64)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(256, 64)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(64, 128)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(180, 64)

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(268.538, 51.7766)

[node name="FacultyOfMathematics" type="Node2D"]
script = ExtResource("4")

[node name="Navigation2D" type="Node2D" parent="."]

[node name="Map_TileMap" type="TileMap" parent="Navigation2D"]
z_index = 1
z_as_relative = false
scale = Vector2(2, 2)
tile_set = ExtResource("1")
format = 2

[node name="Floor1" type="Node2D" parent="."]

[node name="UpperLeft" type="Marker2D" parent="Floor1"]
position = Vector2(-384, -64)

[node name="BottomRight" type="Marker2D" parent="Floor1"]
position = Vector2(1056, 608)

[node name="Floor2" type="Node2D" parent="."]

[node name="UpperLeft" type="Marker2D" parent="Floor2"]
position = Vector2(-336, 1456)

[node name="BottomRight" type="Marker2D" parent="Floor2"]
position = Vector2(1472, 1776)

[node name="Floor3" type="Node2D" parent="."]

[node name="UpperLeft" type="Marker2D" parent="Floor3"]
position = Vector2(-288, 2816)

[node name="BottomRight" type="Marker2D" parent="Floor3"]
position = Vector2(1056, 3200)

[node name="Doors" type="Node2D" parent="."]

[node name="Door130_Sprite" type="Sprite2D" parent="Doors"]
z_index = 1
position = Vector2(328, 272)
scale = Vector2(3, 3)
texture = ExtResource("12")

[node name="Door132_Sprite" type="Sprite2D" parent="Doors"]
z_index = 1
position = Vector2(992, 272)
scale = Vector2(3, 3)
texture = ExtResource("11")

[node name="Door224_Sprite" type="Sprite2D" parent="Doors"]
z_index = 1
position = Vector2(96, 1392)
scale = Vector2(3, 3)
texture = ExtResource("9")

[node name="Door225_Sprite" type="Sprite2D" parent="Doors"]
z_index = 1
position = Vector2(320, 1392)
scale = Vector2(3, 3)
texture = ExtResource("7")

[node name="Door226_Sprite" type="Sprite2D" parent="Doors"]
z_index = 1
position = Vector2(544, 1392)
scale = Vector2(3, 3)
texture = ExtResource("10")

[node name="Door227_Sprite" type="Sprite2D" parent="Doors"]
z_index = 1
position = Vector2(768, 1392)
scale = Vector2(3, 3)
texture = ExtResource("8")

[node name="Door312_Sprite" type="Sprite2D" parent="Doors"]
z_index = 1
position = Vector2(96, 2768)
scale = Vector2(3, 3)
texture = ExtResource("14")

[node name="Door313_Sprite" type="Sprite2D" parent="Doors"]
z_index = 1
position = Vector2(672, 2768)
scale = Vector2(3, 3)
texture = ExtResource("13")

[node name="Teleports" type="Node2D" parent="."]

[node name="TpFloor1-2" parent="Teleports" instance=ExtResource("3")]
position = Vector2(573.405, 545.587)
object_name = NodePath("../..")
function_name = "floor_2"
hint = "2ND_FLOOR"
use_once = false

[node name="TpFloor2-1" parent="Teleports" instance=ExtResource("3")]
position = Vector2(416, 1728)
object_name = NodePath("../..")
function_name = "floor_1"
hint = "1ST_FLOOR"
use_once = false

[node name="TpFloor2-3" parent="Teleports" instance=ExtResource("3")]
position = Vector2(608, 1728)
object_name = NodePath("../..")
function_name = "floor_3"
hint = "3RD_FLOOR"
use_once = false

[node name="TpFloor3-2" parent="Teleports" instance=ExtResource("3")]
position = Vector2(464, 3136)
object_name = NodePath("../..")
function_name = "floor_2"
hint = "2ND_FLOOR"
use_once = false

[node name="TpOutside" parent="Teleports" instance=ExtResource("3")]
position = Vector2(576, 0)
object_name = NodePath("../..")
function_name = "street"
hint = "STREET"
use_once = false

[node name="Colliders" type="Node2D" parent="."]

[node name="BlockFloor0" type="StaticBody2D" parent="Colliders"]
z_index = 1
position = Vector2(-408, 192)
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/BlockFloor0"]
z_index = 1
shape = SubResource("1")

[node name="BlockFloor1" type="StaticBody2D" parent="Colliders"]
position = Vector2(544, 680)
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/BlockFloor1"]
z_index = 1
shape = SubResource("2")

[node name="BlockFloor2" type="StaticBody2D" parent="Colliders"]
position = Vector2(480, 1888)
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/BlockFloor2"]
z_index = 1
shape = SubResource("3")

[node name="BlockFloor2_2" type="StaticBody2D" parent="Colliders"]
position = Vector2(1600, 1696)
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/BlockFloor2_2"]
z_index = 1
shape = SubResource("4")

[node name="BlockFloor3" type="StaticBody2D" parent="Colliders"]
position = Vector2(432, 3304)
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/BlockFloor3"]
z_index = 1
position = Vector2(0, -8)
shape = SubResource("3")

[node name="BlockStreet" type="StaticBody2D" parent="Colliders"]
position = Vector2(552, -32)
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/BlockStreet"]
z_index = 1
shape = SubResource("5")

[node name="FloorPositions" type="Node2D" parent="."]

[node name="Floor1" type="Marker2D" parent="FloorPositions"]
position = Vector2(537.105, 478.685)

[node name="Floor2" type="Marker2D" parent="FloorPositions"]
position = Vector2(420.854, 1659.83)

[node name="Floor3" type="Marker2D" parent="FloorPositions"]
position = Vector2(436.297, 3075.05)

[node name="Node2D" type="Node2D" parent="."]

[node name="Body" parent="Node2D" instance=ExtResource("5")]
position = Vector2(288, 1643)
scale = Vector2(0.9, 0.9)
default_state = 0
restore_position = true

[node name="Turnstile0" parent="Node2D" instance=ExtResource("2")]
z_index = 4
position = Vector2(481.758, 262.635)

[node name="Turnstile1" parent="Node2D" instance=ExtResource("2")]
z_index = 4
position = Vector2(590.758, 262.635)

[node name="Guard" parent="Node2D" instance=ExtResource("6")]
position = Vector2(434.892, 367.18)

[node name="NPC" type="Node2D" parent="Node2D"]

[node name="Character" parent="Node2D/NPC" instance=ExtResource("15")]
position = Vector2(232, 368)
ai_config_path = NodePath("../Config")

[node name="Character2" parent="Node2D/NPC" instance=ExtResource("15")]
position = Vector2(-312, 48)
ai_config_path = NodePath("../Config")

[node name="Character3" parent="Node2D/NPC" instance=ExtResource("15")]
position = Vector2(944, 384)
ai_config_path = NodePath("../Config")

[node name="Config" type="Node" parent="Node2D/NPC"]
script = ExtResource("16")
nav_node = NodePath("../../../Navigation2D")
upper_left_node = NodePath("../../../Floor1/UpperLeft")
bottom_right_node = NodePath("../../../Floor1/BottomRight")

[node name="NPC2" type="Node2D" parent="Node2D"]

[node name="Character" parent="Node2D/NPC2" instance=ExtResource("15")]
position = Vector2(-160, 1544)
ai_config_path = NodePath("../Config")

[node name="Character2" parent="Node2D/NPC2" instance=ExtResource("15")]
position = Vector2(848, 1528)
ai_config_path = NodePath("../Config")

[node name="Character3" parent="Node2D/NPC2" instance=ExtResource("15")]
position = Vector2(88, 1664)
ai_config_path = NodePath("../Config")

[node name="Character4" parent="Node2D/NPC2" instance=ExtResource("15")]
position = Vector2(536, 1560)
ai_config_path = NodePath("../Config")

[node name="Character5" parent="Node2D/NPC2" instance=ExtResource("15")]
position = Vector2(968, 1728)
ai_config_path = NodePath("../Config")

[node name="Config" type="Node" parent="Node2D/NPC2"]
script = ExtResource("16")
nav_node = NodePath("../../../Navigation2D")
upper_left_node = NodePath("../../../Floor2/UpperLeft")
bottom_right_node = NodePath("../../../Floor2/BottomRight")

[node name="NPC3" type="Node2D" parent="Node2D"]

[node name="Character" parent="Node2D/NPC3" instance=ExtResource("15")]
position = Vector2(144, 3056)
ai_config_path = NodePath("../Config")

[node name="Character2" parent="Node2D/NPC3" instance=ExtResource("15")]
position = Vector2(936, 2904)
ai_config_path = NodePath("../Config")

[node name="Character3" parent="Node2D/NPC3" instance=ExtResource("15")]
position = Vector2(-160, 2912)
ai_config_path = NodePath("../Config")

[node name="Config" type="Node" parent="Node2D/NPC3"]
script = ExtResource("16")
nav_node = NodePath("../../../Navigation2D")
upper_left_node = NodePath("../../../Floor3/UpperLeft")
bottom_right_node = NodePath("../../../Floor3/BottomRight")

[node name="Turnstiles" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turnstiles"]
z_index = 1
position = Vector2(544.771, 242.081)
shape = SubResource("6")

[node name="NS" parent="." instance=ExtResource("3")]
position = Vector2(1393.87, 1612.33)
object_name = NodePath("../../FacultyOfMathematics")
function_name = "print_warning"
hint = "NS"
